# JARVIS-agentic-ai

./: .env  Dockerfile  api.py  main.py  pyproject.toml  requirements.txt  research.ipynb
graph/: main_graph.py
memory/: llama_index_memory.py  local_embedding.py  long_term_memory.py  short_term_memory.py
perception/: perplexity_api.py
reasoning/: intent_classifier.py  llm_reasoning.py  update_memory.py
tools/: tool_registry.py
utils/: config.py
